added anomaly detection

--- a/04_Iterators_Generators/anomaly_detection_generators.ipynb
+++ b/04_Iterators_Generators/anomaly_detection_generators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "def read_fake_data(filename):\n",
     "    for timestamp in count():\n",
     "        # insert anomalous data poit aooroxinately once a week\n",
-    "        if randint(0, 7 * 60 * 60 * 24 - 1) ==1:\n",
+    "        if randint(0, 7 * 60 * 60 * 24 - 1) !=1:\n",
     "            value = normalvariate(0,1)\n",
     "\n",
     "        else:\n",
@@ -46,6 +46,12 @@
     "    key = lambda row: row[0].day\n",
     "    for data, data_group in groupby(iterable, key):\n",
     "        yield list(data_group)\n",
+    "\n",
+    "def groupby_window(data, window_size=3600):\n",
+    "    window = tuple(islice(data, window_size))\n",
+    "    for item in data:\n",
+    "        yield window\n",
+    "        window = window[1:] + (item,)\n",
     "\n",
     "def is_normal(data, threshold=1e-3):\n",
     "    _, values = zip(*data)\n",
@@ -62,8 +68,43 @@
     "\n",
     "def filter_anomalous_data(data):\n",
     "    data_group= groupby_day(data)\n",
+    "    # data_group= groupby_window(data)\n",
     "    yield from filter_anomalous_groups(data_group)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = read_fake_data(filename='abc')\n",
+    "\n",
+    "anomaly_generator = filter_anomalous_data(data)\n",
+    "\n",
+    "first_10_anomalies = islice(anomaly_generator, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for data_anomaly in first_10_anomalies:\n",
+    "    # print(data_anomaly)\n",
+    "\n",
+    "    start_date = data_anomaly[0][0]\n",
+    "    end_date = data_anomaly[-1][0]\n",
+    "    print(f\"Anomaly from {start_date} - {end_date}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
