--- a/07_asyncIO/intro.ipynb
+++ b/07_asyncIO/intro.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "Most I/O operations on devices are multiple times slower than the CPU. So even if the communication with the kernel is fast, most time is spent for the kernel to get the result from the device and send it back to the program.\n",
     "\n",
-    "During this time the propram is halted, until it gets a signal that teh write operation has completed. Time spent in a paused state is called I/O wait"
+    "During this time the propram is halted, until it gets a signal that the write operation has completed. Time spent in a paused state is called I/O wait"
    ]
   },
   {
@@ -29,12 +29,17 @@
    "source": [
     "Asynchronous I/O helps to utilize this waiting time by allowing  to perform other operations while the program is in I/O state:\n",
     "\n",
-    "![](/Users/andreasfussstetter/Projects/High_Performance_Python/pics/IMG_6462.jpg)\n",
+    "![](../pics/IMG_6462.jpg)\n",
     "\n",
     "This is possible because while a program is in I/O wait, the kernel is simpky waiting for the device requested to read from to send a signal that the requested data is ready.\n",
     "\n",
-    "Instead of waiting, we can create a mechanism (event loop) so that we can dispatch requests of data, continue performing compute operations, and be notified when the data is ready to be read.\n"
+    "Instead of waiting, we can create a mechanism (event loop: list of functions that need to be run) so that we can dispatch requests of data, continue performing compute operations, and be notified when the data is ready to be read."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -42,7 +47,9 @@
    "source": [
     "### Important: this is all still happening an a single thread and still uses one CPU at a time\n",
     "\n",
-    "In contrast to multiprocessing/multithreading, where a new process is launched that does experience I/O wait but uses multitasking nature of modern CPUs to allow the main process to continue"
+    "In contrast to multiprocessing/multithreading, where a new process is launched that does experience I/O wait but uses multitasking nature of modern CPUs to allow the main process to continue.\n",
+    "\n",
+    "These two mechanisms are often used in tandem: multiple processes are launched, each is efficient at asynchronous I/O.\n"
    ]
   }
  ],
