--- a/07_asyncIO/intro.ipynb
+++ b/07_asyncIO/intro.ipynb
@@ -117,12 +117,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The eventloop.put(do_world) approximates an asynchronous call to the do_world function.\n",
     "\n",
-    "This operation is called **nonblocking**  -> it will return immediately but guarantee that do_world is called at some point later.\n"
+    "This operation is called **nonblocking**  -> it will return immediately but guarantee that do_world is called at some point later. \n"
    ]
   },
   {
@@ -185,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 (default, Sep 16 2021, 08:50:36) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
